deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-1
  labels:
    app: example-app-1
  namespace: example-app-1
spec:
  selector:
    matchLabels:
      app: example-app-1
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: example-app-1
    spec:
      containers:
      - name: example-app-1
        image: example-app-1:latest
        ports:
        - containerPort: 5000
