deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: example-app-1
  name: example-app-1
  labels:
    app: example-app-1
spec:
  type: NodePort
  selector:
    app: example-app-1
  ports:
    - protocol: TCP
      name: http
      port: 5000
      targetPort: 5000
      nodePort: 30000
