deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-1-ingress
  namespace: default
spec:
  rules:
    - host: example-app-1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-app-1
                port:
                  number: 5000
